# Lyrics_Checker

./: CMakeLists.txt  search.cpp
